# resale-houses

./: .gitignore  README.md
.database/migration/: db.sql
.docs/: design.drawio
extractor/: .dockerignore  Dockerfile  Makefile  area.js  community.js  item.js  main.js  package.json  pnpm-lock.yaml
resale-houses-server/: Cargo.toml  README.md
resale-houses-server/crates/area/: Cargo.toml
resale-houses-server/crates/area/src/: area.rs  lib.rs  repo.rs  usecase.rs
resale-houses-server/crates/area/tests/: test_area.rs  tests.rs
resale-houses-server/src/: api.rs  fetcher.rs  lib.rs  server.rs
resale-houses-server/src/api/: area.rs  errors.rs
resale-houses-server/src/fetcher/: error.rs  fetcher.rs  repo.rs
resale-houses-server/src/fetcher/extractor/: area.rs
resale-houses-server/src/server/: server.rs
resale-houses-server/src/server/router/: area.rs
