[package]
name = "resale-houses-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fetcher"

[[bin]]
name = "server"

[workspace]
members = ["crates/area"]

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { workspace = true }
area = { path = "crates/area" }
sqlx = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
axum = "0.7.9"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.133"


[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.91"
sqlx = { version = "0.8.2", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
